--- a/templates/base.html
+++ b/templates/base.html
@@ -9,18 +9,17 @@
     <meta name="author" content="">
     <meta charset="utf-8">
 
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
+    <link href=""{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
     <style> body { padding-top: 60px; } </style>
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="{{ url_for('static', filename='css/bootstrap-responsive.css') }}" rel="stylesheet">
 
     <!-- SUPPORT FOR IE6-8 OF HTML5 ELEMENTS -->
     <!--[if lt IE 9]>
-          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+          <script src="{{ url_for('static', filename='js/html5.js') }}"></script>
       <![endif]-->
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='ico/favicon.ico') }}">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     {% endblock %}
   </head>
 
@@ -69,8 +68,9 @@
         {% endblock %}
 
     </div>
-    {% block js_footer %}
-      <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
+	{% block js_footer %}
+		<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
     {% endblock %}
   </body>
 </html>
